--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script  src="./js/script.js">
+
 <style type="text/css">
 .colorClass
 {
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"> Promenant Innovations</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position:fixed;width:100%;z-index:10;">
+  <a class="navbar-brand" href="#"> <img src="./logo2.png" alt="Promenant Innovations">  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -64,13 +64,13 @@
 
 <div class="container-fluid contain">	
 	<div class="card buysell">
-		<div class="card-header">
-			Buy Or Sell
+		<div class="card-header" style="background-color:indigo;color:white;weight:bolder;">
+			<b>Buy Or Sell</b>
 		</div>
-		<div class="card-body">
-			<div>
-				<button type="button" class="btn btn-outline-success">Success</button>
-				<button type="button" class="btn btn-outline-danger">Danger</button>
+		<div class="card-body" style="background-color: #ffd89b;">
+			<div style="margin-left:16%;">
+				<button type="button" class="btn btn-outline-success">Buy</button>
+				<button type="button" class="btn btn-outline-danger">Sell</button>
 			</div>
 		
 		<br><br>
@@ -94,6 +94,18 @@
 		>
 		<span class="rangeslider__tooltip" id ="range-tooltip"></span>
 		</div>
+		
+		<br><br>
+		<div class="form-group">
+			<label for="formGroupExampleInput">Total</label>
+			<input type="text" class="form-control" id="formGroupExampleInput" placeholder="TRX">
+		</div>
+		<center><button type="button" class="btn btn-success" style="align-content:center;width:70%;">Buy</button></center>
+		<p><center>Trading fees apply for buy and sell orders. For more info about trading fees, <a href="#">See here.</a></center></p>
+		<br><br>
+		<p><center>Copyright © 2019 Promenant Inc. All rights reserved.</center></p>
+		<center><a href="#">Terms of ServicePrivacy Policy</a></center>
+		
 		
 		</form>
 		</div>
