--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="./js/script2.js"></script>
+<script src="./js/script.js"></script>
 
 <style type="text/css">
 .colorClass
@@ -42,11 +44,12 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Help
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">option 1</a>
-          <a class="dropdown-item" href="#">option 2</a>
+          <a class="dropdown-item" href="#">Support</a>
+          <a class="dropdown-item" href="#">FAQ</a>
+		  <a class="dropdown-item" href="#">Token Listing</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
@@ -69,8 +72,8 @@
 		</div>
 		<div class="card-body" style="background-color: #ffd89b;">
 			<div style="margin-left:16%;">
-				<button type="button" class="btn btn-outline-success">Buy</button>
-				<button type="button" class="btn btn-outline-danger">Sell</button>
+				<button type="button" class="btn btn-outline-success" id="buy">Buy</button>
+				<button type="button" class="btn btn-outline-danger" id="sell">Sell</button>
 			</div>
 		
 		<br><br>
@@ -100,7 +103,7 @@
 			<label for="formGroupExampleInput">Total</label>
 			<input type="text" class="form-control" id="formGroupExampleInput" placeholder="TRX">
 		</div>
-		<center><button type="button" class="btn btn-success" style="align-content:center;width:70%;">Buy</button></center>
+		<center><button type="button" class="btn btn-success" style="align-content:center;width:70%;" id="buysell_button">Buy</button></center>
 		<p><center>Trading fees apply for buy and sell orders. For more info about trading fees, <a href="#">See here.</a></center></p>
 		<br><br>
 		<p><center>Copyright © 2019 Promenant Inc. All rights reserved.</center></p>
