--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
   </div>
 </nav>
 
+<div style="background-color:white;width:100%;height:7%;top:8%;position:absolute;">
+	<p class="marquee"><span>Lorem Ipsum is simply dummy text of the printing &nbsp;&nbsp;&nbsp;Lorem Ipsum has been the industry's standard &nbsp;&nbsp;&nbsp; It is a long established fact that a reader</span></p>
+    <p class="marquee marquee2"><span>Lorem Ipsum is simply dummy text of the printing &nbsp;&nbsp;&nbsp;Lorem Ipsum has been the industry's standard &nbsp;&nbsp;&nbsp; It is a long established fact that a reader</span></p>
+</div>
+
+
+<!-- This is filled with image for demo purpose-->
+<div style="z-index:-1;position:absolute;width:10%;height:10%;top:16.5%;left:39%;">
+	<img src="./chart.png">
+</div>
+<!--End-->
+
 <div class="container-fluid contain">	
 	<div class="card buysell">
 		<div class="card-header" style="background-color:indigo;color:white;weight:bolder;">
