--- a/index.html
+++ b/index.html
@@ -76,13 +76,16 @@
 </div>
 
 
-<!-- This is filled with image for demo purpose-->
-<div style="z-index:-1;position:absolute;width:10%;height:10%;top:16.5%;left:39%;">
-	<img src="./chart.png">
-</div>
-<!--End-->
 
 <div class="container-fluid contain">	
+
+	<!-- This is filled with image for demo purpose-->
+	<div class="col" style="z-index:-1;position:absolute;width:10vh;height:10vh;top:16.5vh;left:53vh;">
+		<img src="./chart.png">
+	</div>
+	<!--End-->
+
+
 	<div class="card buysell">
 		<div class="card-header" style="background-color:indigo;color:white;weight:bolder;">
 			<b>Buy Or Sell</b>
@@ -132,7 +135,7 @@
 	</div>
 	
 	<div id="market">
-    	<div style="height:12%;background-color:indigo;">
+    	<div class="" style="height:12%;background-color:indigo;">
         	<span style="color: white; vertical-align: middle;"><center><b>Market</b></center></span>
                   <span class="input-group mb-4">
             <input type="search" placeholder="Search..." aria-describedby="button-addon6" class="form-control">
@@ -375,7 +378,7 @@
     
     
 </div>
-<div id="Accordion1" style="position:absolute;top:16.1%;width:19%;height:60%;left:18.8%;">
+<div id="Accordion1" style="position:absolute;top:16.5vh;width:26.5vh;height:50vh;left:26vh;">
   <h3><a href="#">Order Book
   			<div style="width:auto;">
   				<select style="color:blue;font-size:10px;">
