--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 
 	<br><br>
 
-<div class="tabset blk" style="position:absolute;margin-top:3%;top:100%;width:80%;padding:10px;left:19%;border:solid 1px indigo;border-top-left-radius:25px;border-top-right-radius:25px;">
+<div class="tabset blk" style="position:absolute;top:100vh;width:110vh;padding:10px;left:27vh;border:solid 1px indigo;border-top-left-radius:25px;border-top-right-radius:25px;">
   <!-- Tab 1 -->
   <input type="radio" name="tabset" id="tab1" aria-controls="marzen" checked>
   <label for="tab1" style="color:green;font-weight:bolder;font-size:1.2em">Open Order</label>
@@ -722,7 +722,7 @@
   
 </div>
 
-<div class="footer blk" style="margin-top:10%;top:122%;left:50%;position:absolute;">
+<div class="footer blk" style="top:122vh;left:65vh;position:absolute;">
 	<a href="#" class="to-top" style="text-decoration:none;">Back to top</a>
 </div>
 
