--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	!--End-->
 
 <div class="blk">
-	<div class="card buysell">
+	<div class="card buysell" style="position:static;">
 		<div class="card-header" style="background-color:indigo;color:white;weight:bolder;">
 			<b>Buy Or Sell</b>
 		</div>
@@ -660,12 +660,10 @@
         
     </div> 
 </div>
-</div>
 
+		<br><br>
 
-	<br><br>
-
-<div class="tabset blk" style="position:absolute;top:100vh;width:110vh;padding:10px;left:27vh;border:solid 1px indigo;border-top-left-radius:25px;border-top-right-radius:25px;">
+<div class="tabset blk" style="position:absolute;top:950px;width:110vh;padding:10px;left:27vh;border:solid 1px indigo;border-top-left-radius:25px;border-top-right-radius:25px;">
   <!-- Tab 1 -->
   <input type="radio" name="tabset" id="tab1" aria-controls="marzen" checked>
   <label for="tab1" style="color:green;font-weight:bolder;font-size:1.2em">Open Order</label>
@@ -675,7 +673,7 @@
   
   <div class="tab-panels">
     <section id="marzen" class="tab-panel">
- <table class="table">
+ <table class="table" style="position:relative;width:100%;">
   <thead class="thead-dark" >
     <tr>
       <th scope="col">Date</th>
@@ -721,9 +719,12 @@
   
 </div>
 
-<div class="footer blk" style="top:122vh;left:65vh;position:absolute;">
+<div class="footer blk" style="top:1150px;left:65vh;position:absolute;">
 	<a href="#" class="to-top" style="text-decoration:none;">Back to top</a>
 </div>
+
+</div>
+
 
 <script type="text/javascript">
 $(function() {
