--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
 <div class="container-fluid contain">	
 
-	<!-- This is filled with image for demo purpose--
+	<!-- This is filled with image for demo purpose-->
 	<div class="col blk" style="z-index:0;position:absolute;width:10vh;height:10vh;top:16.5vh;left:53vh;">
 		<img src="./chart.png">
 	</div>
-	!--End-->
+	<!--End-->
 
 <div class="blk">
-	<div class="card buysell" style="position:static;">
+	<div class="card buysell" style="position:absolute;">
 		<div class="card-header" style="background-color:indigo;color:white;weight:bolder;">
 			<b>Buy Or Sell</b>
 		</div>
