--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 </nav>
 
-<div style="background-color:white;width:100%;height:7%;top:8%;position:absolute;">
+<div style="background-color:white;width:100%;height:60px;top:8%;position:absolute;">
 	<p class="marquee"><span>Lorem Ipsum is simply dummy text of the printing &nbsp;&nbsp;&nbsp;Lorem Ipsum has been the industry's standard &nbsp;&nbsp;&nbsp; It is a long established fact that a reader</span></p>
     <p class="marquee marquee2"><span>Lorem Ipsum is simply dummy text of the printing &nbsp;&nbsp;&nbsp;Lorem Ipsum has been the industry's standard &nbsp;&nbsp;&nbsp; It is a long established fact that a reader</span></p>
 </div>
@@ -79,11 +79,11 @@
 
 <div class="container-fluid contain">	
 
-	<!-- This is filled with image for demo purpose-->
-	<div class="col blk" style="z-index:0;position:absolute;width:10vh;height:10vh;top:16.5vh;left:53vh;">
+	<!-- This is filled with image for demo purpose--
+	<div class="col blk" style="z-index:0;position:absolute;width:300px;height:100px;top:16.5vh;left:53vh;">
 		<img src="./chart.png">
 	</div>
-	<!--End-->
+	!--End-->
 
 <div class="blk">
 	<div class="card buysell" style="position:absolute;">
@@ -135,7 +135,7 @@
 	</div>
     
     
-    <div id="Accordion1" style="position:absolute;top:16.5vh;width:26.5vh;height:50vh;left:26vh;">
+    <div id="Accordion1" style="position:absolute;top:16.5vh;width:220px;height:300px;left:217px;">
   <h3><a href="#">Order Book
   			<div style="width:auto;">
   				<select style="color:blue;font-size:10px;">
@@ -663,7 +663,7 @@
 
 		<br><br>
 
-<div class="tabset blk" style="position:absolute;top:950px;width:110vh;padding:10px;left:27vh;border:solid 1px indigo;border-top-left-radius:25px;border-top-right-radius:25px;">
+<div class="tabset blk" style="position:absolute;top:900px;width:1000px;padding:10px;left:230px;border:solid 1px indigo;border-top-left-radius:25px;border-top-right-radius:25px;">
   <!-- Tab 1 -->
   <input type="radio" name="tabset" id="tab1" aria-controls="marzen" checked>
   <label for="tab1" style="color:green;font-weight:bolder;font-size:1.2em">Open Order</label>
@@ -719,7 +719,7 @@
   
 </div>
 
-<div class="footer blk" style="top:1150px;left:65vh;position:absolute;">
+<div class="footer blk" style="top:1150px;left:600px;position:absolute;">
 	<a href="#" class="to-top" style="text-decoration:none;">Back to top</a>
 </div>
 
