converted dynamic sizing to static

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
 <div class="container-fluid contain">	
 
-	<!-- This is filled with image for demo purpose--
-	<div class="col blk" style="z-index:0;position:absolute;width:300px;height:100px;top:16.5vh;left:53vh;">
+	<!-- This is filled with image for demo purpose-->
+	<div class="col blk" style="z-index:0;position:absolute;width:300px;height:100px;top:16.5vh;left:450px;">
 		<img src="./chart.png">
 	</div>
-	!--End-->
+	<!--End-->
 
 <div class="blk">
 	<div class="card buysell" style="position:absolute;">
