converted dynamic sizing to static

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 </nav>
 
-<div style="background-color:white;width:100%;height:60px;top:8%;position:absolute;">
+<div style="background-color:white;width:100%;height:60px;top:65px;position:absolute;">
 	<p class="marquee"><span>Lorem Ipsum is simply dummy text of the printing &nbsp;&nbsp;&nbsp;Lorem Ipsum has been the industry's standard &nbsp;&nbsp;&nbsp; It is a long established fact that a reader</span></p>
     <p class="marquee marquee2"><span>Lorem Ipsum is simply dummy text of the printing &nbsp;&nbsp;&nbsp;Lorem Ipsum has been the industry's standard &nbsp;&nbsp;&nbsp; It is a long established fact that a reader</span></p>
 </div>
@@ -80,7 +80,7 @@
 <div class="container-fluid contain">	
 
 	<!-- This is filled with image for demo purpose-->
-	<div class="col blk" style="z-index:0;position:absolute;width:300px;height:100px;top:16.5vh;left:450px;">
+	<div class="col blk" style="z-index:0;position:absolute;width:300px;height:100px;top:150px;left:450px;">
 		<img src="./chart.png">
 	</div>
 	<!--End-->
@@ -135,7 +135,7 @@
 	</div>
     
     
-    <div id="Accordion1" style="position:absolute;top:16.5vh;width:220px;height:300px;left:217px;">
+    <div id="Accordion1" style="position:absolute;top:150px;width:220px;height:300px;left:217px;">
   <h3><a href="#">Order Book
   			<div style="width:auto;">
   				<select style="color:blue;font-size:10px;">
